# Medical-Data-Analysis

./: .gitignore  Dockerfile  docker-compose.yml  experiments.ipynb  load_prd_model.ipynb  ml_experiments.ipynb  requirements-clinical.txt
datasets/: README.md
med_data_analysis-main/: .gitignore  README.md  pyproject.toml  request_history.db
med_data_analysis-main/alembic/: env.py
med_data_analysis-main/app/api/: deps.py
med_data_analysis-main/app/api/v1/: router.py
med_data_analysis-main/app/core/: __init__.py  constants.py  security.py
med_data_analysis-main/app/database/: __init__.py  connection.py
med_data_analysis-main/app/services/: prediction.py
med_data_analysis-main/app/tests/: test_prediction.py
med_data_analysis-main/med_data_analysis-main/: README.md  alembic.ini  request_history.db
med_data_analysis-main/med_data_analysis-main/alembic/versions/: c48a9029ad04_initial_migration_create_request_.py
med_data_analysis-main/med_data_analysis-main/app/: main.py
med_data_analysis-main/med_data_analysis-main/app/core/: config.py  logging.py
med_data_analysis-main/med_data_analysis-main/app/database/: models.py
med_data_analysis-main/med_data_analysis-main/app/models/: __init__.py  schemas.py
med_data_analysis-main/med_data_analysis-main/app/services/: __init__.py  history.py
med_data_analysis-main/med_data_analysis-main/notebooks/: ecg_linear_models.ipynb  ptbxl_eda_final.ipynb  test_fastapi.ipynb
med_data_analysis-main/model_training/: train_model.py
med_data_analysis-main/notebooks/: test_fastapi.ipynb  test_history.ipynb
(+38 files in other folders)
